<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="exame.myexama14albertoab.SegundaActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/idNoraboa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noraboa"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idAcabar"
        android:text="@string/acabar"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idRg"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbSus"
                android:id="@+id/idSus"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbApr"
                android:id="@+id/idApr"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbNot"
                android:id="@+id/idNot"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbSob"
                android:id="@+id/idSob"/>
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idScore"
            android:text="@string/btnScore"
            android:layout_gravity="center|center_vertical"
            android:gravity="center"
            android:layout_marginLeft="@dimen/marxe"/>
    </LinearLayout>

    <TextView
        android:id="@+id/idtvNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota"/>


</LinearLayout>
